# suanPan

./: .codecov.yml  .config.cmake  .gitattributes  .gitignore  .lgtm.yml  .travis.yml  CMakeLists.txt  CNAME  CONTRIBUTING.md  README.md  Resharper.DotSettings  suanPan  suanPan.cpp  suanPan.h
Constraint/: CMakeLists.txt  Constraint  Constraint.cpp  Constraint.h  MPC.cpp  MPC.h
Constraint/BC/: BC  BC.cpp  BC.h  BC2.cpp  BC2.h  CMakeLists.txt
Constraint/Criterion/: Criterion.cpp  Criterion.h  MaxDisplacement.cpp  MaxDisplacement.h  MinDisplacement.cpp  MinDisplacement.h
Converger/: AbsDisp.cpp  AbsDisp.h  AbsError.cpp  AbsError.h  AbsIncreDisp.cpp  AbsIncreDisp.h  AbsIncreEnergy.cpp  AbsIncreEnergy.h  AbsResidual.cpp  AbsResidual.h  Converger.cpp  Converger.h  FixedNumber.cpp  FixedNumber.h  RelDisp.cpp  RelDisp.h  RelError.cpp  RelError.h  RelIncreDisp.cpp  RelIncreDisp.h  RelIncreEnergy.cpp  RelIncreEnergy.h  RelResidual.cpp  RelResidual.h
Database/: Database.cpp  Database.h  HDF.cpp  HDF.h  SQL.cpp  SQL.h
Developer/Element/: CMakeLists.txt  ElementExample.cpp  ElementExample.h
Developer/Material/: CMakeLists.txt  MaterialExample.cpp  MaterialExample.h
Developer/Modifier/: CMakeLists.txt  ModifierExample.cpp  ModifierExample.h
Developer/ModuleBundle/: CMakeLists.txt
Developer/Section/: CMakeLists.txt  SectionExample.cpp  SectionExample.h
Domain/: Domain.cpp  Domain.h  DomainBase.cpp  DomainBase.h  ExternalModule.cpp  ExternalModule.h  Factory.hpp  Node.cpp  Node.h  Storage.hpp  Tag.cpp  Tag.h
Domain/MetaMat/: BandMat.hpp  BandSymmMat.hpp  FullMat.hpp  MetaMat.hpp  SparseMat.hpp  SparseSymmMat.hpp  SymmPackMat.hpp  comparator.hpp  csc_form.hpp  csr_form.hpp  operator_times.hpp  sparse_form.hpp  triplet_form.hpp
Element/: CMakeLists.txt  Element  Element.cpp  Element.h  ElementBase.cpp  ElementBase.h  ElementParser.cpp  ElementParser.h  ElementTemplate.cpp  ElementTemplate.h  MaterialElement.cpp  MaterialElement.h  SectionElement.cpp  SectionElement.h
Element/Beam/: B21.cpp  B21.h  B21H.cpp  B21H.h  B31.cpp  B31.h  Beam  CMakeLists.txt  EB21.cpp  EB21.h  F21.cpp  F21.h  F21H.cpp  F21H.h  F31.cpp  F31.h  MVLEM.cpp  MVLEM.h
Element/Cube/: C3D20.cpp  C3D20.h  C3D4.cpp  C3D4.h  C3D8.cpp  C3D8.h  C3D8I.cpp  C3D8I.h  CIN3D8.cpp  CIN3D8.h  CMakeLists.txt  Cube
Element/Membrane/: Allman.cpp  Allman.h  CAX3.cpp  CAX3.h  CAX4.cpp  CAX4.h  CAX8.cpp  CAX8.h  CINP4.cpp  CINP4.h  CMakeLists.txt  CP3.cpp  CP3.h  CP4.cpp  CP4.h  CP4I.cpp  CP4I.h  CP6.cpp  CP6.h  CP8.cpp  CP8.h  GCMQ.cpp  GCMQ.h  GQ12.cpp  GQ12.h  Membrane  PS.cpp  PS.h  QE2.cpp  QE2.h  RCP4.cpp  RCP4.h  RGCMQ.cpp  RGCMQ.h  RebarLayer.cpp  RebarLayer.h  SGCMQ.cpp  SGCMQ.h  SRGCMQ.cpp  SRGCMQ.h
Element/Modifier/: CMakeLists.txt  LumpedScale.cpp  LumpedScale.h  LumpedSimple.cpp  LumpedSimple.h  Modifier  Modifier.cpp  Modifier.h  Rayleigh.cpp  Rayleigh.h
Element/Plate/: DKT3.cpp  DKT3.h  DKT4.cpp  DKT4.h  Mindlin.cpp  Mindlin.h
Element/Shell/: CMakeLists.txt  DKTS3.cpp  DKTS3.h  S4.cpp  S4.h  Shell  ShellBase.cpp  ShellBase.h
Element/Special/: CMakeLists.txt  Damper01.cpp  Damper01.h  Damper02.cpp  Damper02.h  Mass.cpp  Mass.h  SingleSection2D.cpp  SingleSection2D.h  SingleSection3D.cpp  SingleSection3D.h  Special  Spring01.cpp  Spring01.h  Spring02.cpp  Spring02.h  Tie.cpp  Tie.h
Element/Truss/: T2D2.cpp  T2D2.h  T2D2S.cpp  T2D2S.h  T3D2.cpp  T3D2.h  T3D2S.cpp  T3D2S.h
Element/Utility/: B2DC.cpp  B2DC.h  B2DL.cpp  B2DL.h  B3DC.cpp  B3DC.h  B3DL.cpp  B3DL.h  CMakeLists.txt  MatrixModifier.h  Orientation.cpp  Orientation.h  T2DC.cpp  T2DC.h  T2DL.cpp  T2DL.h  T3DC.cpp  T3DC.h  T3DL.cpp  T3DL.h  Utility
Element/Visualisation/: vtkBase.cpp  vtkBase.h  vtkParser.cpp  vtkParser.h
Example/: ELNS  LOOP2.txt  MaterialTest.supan
Example/Element/: Allman.supan  B21.supan  B21H.supan  B31.supan  C3D20.supan  C3D20NL.supan  C3D4.supan  C3D4NL.supan  C3D8.supan  C3D8I.supan  C3D8R.supan  CAX3.supan  CAX4.supan  CAX8.supan  CIN3D8.supan  CINP4.supan  CP3NL.supan  CP4.supan  CP4NL.supan  CP4R.supan  CP6NL.supan  CP8NL.supan  CP8R.supan  DKT4.supan  (+24 more)
Load/: Acceleration.cpp  Acceleration.h  CMakeLists.txt  Load  Load.cpp  Load.h  NodalDisplacement.cpp  NodalDisplacement.h  NodalLoad.cpp  NodalLoad.h
Material/: Material.cpp  Material.h  MaterialParser.cpp  MaterialParser.h  MaterialTemplate.cpp  MaterialTemplate.h  MaterialTester.cpp  MaterialTester.h
Recorder/: CMakeLists.txt  EigenRecorder.cpp  EigenRecorder.h  ElementRecorder.cpp  ElementRecorder.h  FrameRecorder.cpp  FrameRecorder.h  NodeRecorder.cpp  NodeRecorder.h  OutputType.cpp  OutputType.h  Recorder  Recorder.cpp  Recorder.h
Resource/: resource.h  suanPan.rc  suanPan_gcc.rc
Section/: ParameterType.cpp  ParameterType.h  Section  Section.cpp  Section.h  SectionParser.cpp  SectionParser.h
Solver/: Arnoldi.cpp  Arnoldi.h  BFGS.cpp  BFGS.h  MPDC.cpp  MPDC.h  Newton.cpp  Newton.h  Ramm.cpp  Ramm.h  Solver.cpp  Solver.h
Step/: ArcLength.cpp  ArcLength.h  Bead.cpp  Bead.h  Buckle.cpp  Buckle.h  CMakeLists.txt  Dynamic.cpp  Dynamic.h  Frequency.cpp  Frequency.h  Static.cpp  Static.h  Step  Step.cpp  Step.h
Toolbox/: CMakeLists.txt  IntegrationPlan.cpp  PropertyType.h  Toolbox  argumentParser.cpp  argumentParser.h  arpack_wrapper.cpp  arpack_wrapper.h  commandParser.cpp  commandParser.h  debug.cpp  debug.h  shapeFunction.h  sort_rcm.cpp  sort_rcm.h  tensorToolbox.cpp  tensorToolbox.h  utility.cpp  utility.h
Toolbox/superlu-src/: CMakeLists.txt
(+920 files in other folders)
